# XID-contract

./: Cargo.toml  README.md  canister_ids.json  dfx.json  test.md  test.sh
crates/verify/: Cargo.toml  verify.did
crates/verify/secp256k1/: Cargo.toml
crates/verify/secp256k1/src/: lib.rs
crates/verify/src/: lib.rs
crates/xid/: Cargo.toml  xid.did
crates/xid/src/: http.rs  lib.rs  rc_bytes.rs  types.rs  verify.rs
src/rust_xid_backend/: Cargo.toml
xidc/: Types.mo  xid-center.mo
xidc/lib/: Account.mo  Cmc.mo
