[package]
name = "verify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.13.1"
secp256k1 = { path = "secp256k1" }
serde_json = "1.0.89"
sha3 = "0.10.6"
ic-cdk = "0.5.2"
ic-cdk-macros = "0.5.2"
candid = "0.7.15"
serde = "1.0.143"